# sysopswork-python

./: README.md  pyproject.toml
src/sysopswork/: sysopswork.py
