[build-system]
requires = ["hatchling >= 1.26", "requests >= 2.32"]
build-backend = "hatchling.build"

[project]
name = "sysopswork"
version = "0.1.0"
authors = [
  { name="Rodrigo Silva", email="rodrigo.silva@sysopswork.com" },
]
description = "SysOpsWork Automation supporting package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/sysopswork/sysopswork-python"
Issues = "https://github.com/sysopswork/sysopswork-python/issues"
